--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,7 @@
 body {
     background-color: #e4e4e4;
     background-image: url('/images/bg.jpg');
-	font-family: Open Sans;
+	font-family: system-ui, Roboto, sans-serif;
     margin-top: 10%;
     margin-bottom: 50px;
 }
@@ -46,8 +46,8 @@ body {
 
 #answers li p {
     color: #0b0e21;
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 1.2rem;
+    font-weight: 500;
     flex: calc(100% - 75px);
     margin: auto 20px;
     transition: color .3s ease;
