--- a/server/views/user.ejs
+++ b/server/views/user.ejs
@@ -1,26 +1,37 @@
 <% include header.ejs %>
-<div class="btn-position"></div>
+<div class="filter" style="margin-top: 20px; margin-left: 20px;">
+    <input type="number" name="dayAgo" placeholder="Filter by days ago ">
+    <button type="button" class="btn btn-info btnFilter" onclick="filterUser()">Filter</button>
+</div>
 <button style="margin-top: 20px; margin-left: 20px;" onclick="exportTableToExcel('userList', 'users')" class="btn btn-info btnExport">Export Excel</button>
 <% if(data && data.length) { %>
     <div style="height:auto; margin-top: 10px; margin-left: 20px; margin-right: 20px; background-color: white;">
         <table id="userList" class="table table-striped table-bordered table-hover">
                 <tr>
-                    <th width="30%">
+                    <th width="5%">
+                        #
+                    </th>
+                    <th width="25%">
                         Name
                     </th>
                     <th width="30%">
                         Email
                     </th>
-                    <th width="30%">
+                    <th width="20%">
                         Phone Number
                     </th>
+                    <th width="20%">
+                        Time
+                    </th>
                 </tr>
-            <% data.forEach(item => { %>
+            <% data.forEach((item, i) => { %>
     
             <tr>
+                <td ><%= i+1 %></td>
                 <td ><%= item.name %></td>
                 <td ><%= item.email %></td>
                 <td ><%= item.phoneNumber %></td>
+                <td ><%= new Date(item.createdAt).toLocaleString() %></td>
             </tr>
     
             <% }) %>
@@ -57,6 +68,15 @@
             
             //triggering the function
             downloadLink.click();
+        }
+    }
+
+    function filterUser() {
+        let dayAgo = $('input[name="dayAgo"]').val()
+        console.log(dayAgo)
+        if (dayAgo) {
+            console.log(location.href )
+            window.location.href = `?daysAgo=${dayAgo}`
         }
     }
 </script>
