--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,8 @@
+
 body {
     background-color: #e4e4e4;
     background-image: url('/images/bg.jpg');
-	font-family: American Typewriter, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
     margin-top: 10%;
     margin-bottom: 50px;
 }
@@ -125,7 +126,6 @@ input {
 }
 
 .popup p {
-    margin: 20px 10% 0;
     margin-bottom: 20px;
 }
 
@@ -137,7 +137,7 @@ input {
 }
 
 .popup img {
-    max-width: 300px;
+    max-width: 200px;
     border-radius: 10px;
 }
 
