--- a/server/views/user.ejs
+++ b/server/views/user.ejs
@@ -3,7 +3,7 @@
     <input type="number" name="dayAgo" placeholder="Filter by days ago ">
     <button type="button" class="btn btn-info btnFilter" onclick="filterUser()">Filter</button>
 </div>
-<button style="margin-top: 20px; margin-left: 20px;" onclick="exportTableToExcel('userList', 'users')" class="btn btn-info btnExport">Export Excel</button>
+<button style="margin-top: 20px; margin-left: 20px;" onclick="exportCsv()" class="btn btn-info btnExport">Export Excel</button>
 <% if(data && data.length) { %>
     <div style="height:auto; margin-top: 10px; margin-left: 20px; margin-right: 20px; background-color: white;">
         <table id="userList" class="table table-striped table-bordered table-hover">
@@ -40,43 +40,66 @@
     </div>
 <% } %>
 <script>
-    function exportTableToExcel(tableID, filename = ''){
-        var downloadLink;
-        var dataType = 'application/vnd.ms-excel';
-        var tableSelect = document.getElementById(tableID);
-        var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
-        
-        // Specify file name
-        filename = filename?filename+'.xls':'excel_data.xls';
-        
-        // Create download link element
-        downloadLink = document.createElement("a");
-        
-        document.body.appendChild(downloadLink);
-        
-        if(navigator.msSaveOrOpenBlob){
-            var blob = new Blob(['\ufeff', tableHTML], {
-                type: dataType
-            });
-            navigator.msSaveOrOpenBlob( blob, filename);
-        }else{
-            // Create a link to the file
-            downloadLink.href = 'data:' + dataType + ', ' + tableHTML;
-        
-            // Setting the file name
-            downloadLink.download = filename;
-            
-            //triggering the function
-            downloadLink.click();
-        }
-    }
-
     function filterUser() {
         let dayAgo = $('input[name="dayAgo"]').val()
         console.log(dayAgo)
         if (dayAgo) {
             console.log(location.href )
             window.location.href = `?daysAgo=${dayAgo}`
+        }
+    }
+
+    function exportCsv() {
+        let users = JSON.parse('<%- JSON.stringify(data) %>');
+
+        function process(user) {
+            var finalVal = ''
+
+            for (var key in user) {
+
+                var innerValue;
+                var result;
+
+                if (!user[key]) {
+                    result = ''
+                } else {
+                    innerValue = user[key] === null ? '' : user[key].toString();
+                    result = innerValue.replace(/"/g, '""');
+
+                    if (result.search(/("|,|\n)/g) >= 0) {
+                        result = '"' + result + '"';
+                    }
+                }
+
+                finalVal += result + ',';
+            }
+
+            finalVal = finalVal.replace(/,$/, '') + '\n';
+
+            return finalVal;
+        };
+
+        var csvFile = 'CreatedAt,Name,Email,Phone\n';
+
+        users.forEach(function (user) {
+            delete user._id
+            csvFile += process(user);
+        });
+
+        var blob = new Blob(['\ufeff' + csvFile], { type: 'text/csv;charset=utf-8;' });
+
+        let link = document.createElement('a');
+
+        if (link.download !== undefined) { // feature detection
+            // Browsers that support HTML5 download attribute
+            var url = URL.createObjectURL(blob);
+
+            link.setAttribute('href', url);
+            link.setAttribute('download', 'interactions.csv');
+            link.innerText = 'Download';
+            link.style.visibility = 'hidden';
+
+            link.click()
         }
     }
 </script>
