--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -62,6 +62,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/question">Questions</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/description">Descriptions</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <button
